anywhere/k8s/immich/nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: immich-server-nodeport
  namespace: immich
spec:
  type: NodePort
  selector:
    app.kubernetes.io/controller: main
    app.kubernetes.io/instance: immich
    app.kubernetes.io/name: server
  ports:
    - port: 2283
      targetPort: 2283
      nodePort: 32283
