anywhere/k8s/immich/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: immich
  namespace: immich
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`i1.beijns.eu.org`)
      kind: Rule
      middlewares:
        - name: security-headers
          namespace: kube-system
      services:
        - name: immich-server
          port: 2283
  tls:
    certResolver: cloudflare
    domains:
      - main: i1.beijns.eu.org
